--- a/css.css
+++ b/css.css
@@ -12,7 +12,9 @@ main{
     margin: 0 6%;
 }
 
-
+#github{
+    width:20px ;
+}
 #nav{
     display: flex;
     background: linear-gradient(90deg, #ffff,red,orange);
@@ -21,6 +23,9 @@ main{
     background-color: 0,0,0; height: 39px;
     justify-content: flex-end;
     align-items: center;
+    position: sticky;
+    top: 0px;
+    z-index: 1;
 }
 #s1{
     position: absolute;
@@ -45,7 +50,7 @@ main{
     max-width: 400px;
 }
 img{
-   
+    size:90%;
     width: 70%;
     height: 90%;
 }
